Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-5973

bad error message in ofd_destroy()

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.5.4
    • Lustre 2.5.3
    • None
    • 3
    • 16682

      First noticed when examining error logs for a different problem. The following code fragment prints the wrong value in the error log:

                      } else if (lrc != 0) {
                              CERROR("%s: error destroying object "DFID": %d\n",
                                     ofd_obd(ofd)->obd_name, PFID(&info->fti_fid),
                                     rc);
                              rc = lrc;
                      }
      

      It should be printing the lrc, not rc. As is the logged message is not as useful as it could be.

      Will enter a patch to correct this.

            bogl Bob Glossman (Inactive)
            bogl Bob Glossman (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: