LU-5973 ofd: fix bad error message

A CERROR in ofd_destroy() was printing the wrong return value.
This mod fixes that, uses the correct value.

Signed-off-by: Bob Glossman <bob.glossman@intel.com>
Change-Id: Iedc21f2544bdb69e02ec787c059b5ad21d12786b
Reviewed-on: http://review.whamcloud.com/12921
Tested-by: Jenkins
Reviewed-by: Andreas Dilger <andreas.dilger@intel.com>
Reviewed-by: Jian Yu <jian.yu@intel.com>
Tested-by: Maloo <hpdd-maloo@intel.com>
Reviewed-by: Nathaniel Clark <nathaniel.l.clark@intel.com>
Reviewed-by: Oleg Drokin <oleg.drokin@intel.com>